# FraudJob

./: .gitignore  bootstrap.sh  pyproject.toml  requirements.txt
notebooks/: 2_feature_engineering.ipynb  3_model_exploration.ipynb  4_best_model_evaluation.ipynb
notebooks/eda_plots/: ct_counts_department.csv  ct_counts_employment_type.csv  ct_counts_function.csv  ct_counts_industry.csv  ct_counts_required_education.csv  ct_counts_required_experience.csv  ct_counts_salary_range.csv  ct_counts_title.csv  ct_norm_department.csv  ct_norm_employment_type.csv  ct_norm_function.csv  ct_norm_industry.csv  ct_norm_location.csv  ct_norm_required_education.csv  ct_norm_required_experience.csv  ct_norm_salary_range.csv  ct_norm_title.csv  missing_summary_by_column.csv  row_stats_sample.csv  top_tokens_benefits.csv  top_tokens_company_profile.csv  top_tokens_description.csv  top_tokens_requirements.csv
src/eda/: EDA.ipynb
src/eda/eda_plots/: ct_counts_location.csv  top_tokens_description.csv  top_tokens_requirements.csv
src/features/: features.ipynb
