[project]
name = "fraudjob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "missingno>=0.5.2",
    "nltk>=3.9.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "wordcloud>=1.9.4",
    "wordninja>=2.0.0",
    "xgboost>=3.1.1",
]
